Added add class into timetable UI and list OnItemClicked listeners.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
 
+    <string name="spinner_prompt">Choose your class</string>
+
 </resources>
