--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="spinner_prompt">Choose your class</string>
 
+    <string name="changelog"><b>0.0.5 (Alpha)</b>\nNo changelog available for this first version.</string>
+
 </resources>
