Intermediate in refactoring.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <string name="app_name">Chalkboard</string>
-    <string name="app_version">0.0.5 (Alpha)</string>
+    <string name="app_version">0.0.5 (Beta)</string>
     <string name="app_version_code">5</string>
 
     <string name="drawer_open">Open</string>
@@ -11,6 +11,6 @@
 
     <string name="spinner_prompt">Choose your class</string>
 
-    <string name="changelog"><b>0.0.5 (Alpha)</b>\nNo changelog available for this first version.</string>
+    <string name="changelog"><b>0.0.5 (Beta)</b>\nNo changelog available for this first version.</string>
 
 </resources>
